--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,7 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
+              "src/guido.ico",
               "src/assets"
             ],
             "styles": [
