--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
-    "@angular/cdk": "~8.2.2",
+    "@angular/cdk": "^8.2.2",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.7",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.2.7",
@@ -31,9 +32,9 @@
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
