--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@angular/fire": "^5.2.1",
+    "firebase": "^7.2.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
